--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "typeorm": "^0.3.15",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "vercel": "^29.1.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
