--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_HOST='localhost'
+DB_HOST='book-axuo2dpuk-olutundejoshua.vercel.app'
 DB_PORT=5432
 DB_USERNAME='postgres'
 DB_PASSWORD='password'
